# PyConDE23

./: .gitignore  01_io_patterns.ipynb  02_pdf_parser.ipynb  03_json_to_arrow.ipynb  04_summary.ipynb  Cargo.toml  License.txt  Readme.md  requirements.txt  timing.py  x.py
01_io_patterns/: Cargo.toml
01_io_patterns/src/: complex.rs  complex_tagged.rs  double.rs  echo.rs
02_pdf_parser/: Cargo.toml
02_pdf_parser/src/: main.rs
03_json_to_arrow/: Cargo.toml
03_json_to_arrow/src/: main.rs  main_json_only.rs  main_v2.rs  main_v3.rs
