[package]
name = "io-patterns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "io-patterns-double"
path = "src/double.rs"

[[bin]]
name = "io-patterns-echo"
path = "src/echo.rs"

[[bin]]
name = "io-patterns-complex"
path = "src/complex.rs"

[[bin]]
name = "io-patterns-complex-tagged"
path = "src/complex_tagged.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
